🛂 Remove unecessary apiKey
