# docs/restapi/operations/identities_microsservice_api.go
@@ -1,364 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"fmt"
-	"net/http"
-	"strings"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/loads"
-	"github.com/go-openapi/runtime"
-	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/runtime/security"
-	"github.com/go-openapi/spec"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// NewIdentitiesMicrosserviceAPI creates a new IdentitiesMicrosservice instance
-func NewIdentitiesMicrosserviceAPI(spec *loads.Document) *IdentitiesMicrosserviceAPI {
-	return &IdentitiesMicrosserviceAPI{
-		handlers:            make(map[string]map[string]http.Handler),
-		formats:             strfmt.Default,
-		defaultConsumes:     "application/json",
-		defaultProduces:     "application/json",
-		customConsumers:     make(map[string]runtime.Consumer),
-		customProducers:     make(map[string]runtime.Producer),
-		PreServerShutdown:   func() {},
-		ServerShutdown:      func() {},
-		spec:                spec,
-		useSwaggerUI:        false,
-		ServeError:          errors.ServeError,
-		BasicAuthenticator:  security.BasicAuth,
-		APIKeyAuthenticator: security.APIKeyAuth,
-		BearerAuthenticator: security.BearerAuth,
-
-		JSONConsumer: runtime.JSONConsumer(),
-
-		JSONProducer: runtime.JSONProducer(),
-
-		PostChallRecoveryHandler: PostChallRecoveryHandlerFunc(func(params PostChallRecoveryParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation PostChallRecovery has not yet been implemented")
-		}),
-		PostLoginHandler: PostLoginHandlerFunc(func(params PostLoginParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation PostLogin has not yet been implemented")
-		}),
-		PostRecoveryHandler: PostRecoveryHandlerFunc(func(params PostRecoveryParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation PostRecovery has not yet been implemented")
-		}),
-		PostRegisterHandler: PostRegisterHandlerFunc(func(params PostRegisterParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation PostRegister has not yet been implemented")
-		}),
-
-		// Applies when the "X-API-Key" header is set
-		APIKeyHeaderAuth: func(token string) (interface{}, error) {
-			return nil, errors.NotImplemented("api key auth (APIKeyHeader) X-API-Key from header param [X-API-Key] has not yet been implemented")
-		},
-		// default authorizer is authorized meaning no requests are blocked
-		APIAuthorizer: security.Authorized(),
-	}
-}
-
-/*IdentitiesMicrosserviceAPI Microsservice API responsible about all identities core data */
-type IdentitiesMicrosserviceAPI struct {
-	spec            *loads.Document
-	context         *middleware.Context
-	handlers        map[string]map[string]http.Handler
-	formats         strfmt.Registry
-	customConsumers map[string]runtime.Consumer
-	customProducers map[string]runtime.Producer
-	defaultConsumes string
-	defaultProduces string
-	Middleware      func(middleware.Builder) http.Handler
-	useSwaggerUI    bool
-
-	// BasicAuthenticator generates a runtime.Authenticator from the supplied basic auth function.
-	// It has a default implementation in the security package, however you can replace it for your particular usage.
-	BasicAuthenticator func(security.UserPassAuthentication) runtime.Authenticator
-
-	// APIKeyAuthenticator generates a runtime.Authenticator from the supplied token auth function.
-	// It has a default implementation in the security package, however you can replace it for your particular usage.
-	APIKeyAuthenticator func(string, string, security.TokenAuthentication) runtime.Authenticator
-
-	// BearerAuthenticator generates a runtime.Authenticator from the supplied bearer token auth function.
-	// It has a default implementation in the security package, however you can replace it for your particular usage.
-	BearerAuthenticator func(string, security.ScopedTokenAuthentication) runtime.Authenticator
-
-	// JSONConsumer registers a consumer for the following mime types:
-	//   - application/json
-	JSONConsumer runtime.Consumer
-
-	// JSONProducer registers a producer for the following mime types:
-	//   - application/json
-	JSONProducer runtime.Producer
-
-	// APIKeyHeaderAuth registers a function that takes a token and returns a principal
-	// it performs authentication based on an api key X-API-Key provided in the header
-	APIKeyHeaderAuth func(string) (interface{}, error)
-
-	// APIAuthorizer provides access control (ACL/RBAC/ABAC) by providing access to the request and authenticated principal
-	APIAuthorizer runtime.Authorizer
-
-	// PostChallRecoveryHandler sets the operation handler for the post chall recovery operation
-	PostChallRecoveryHandler PostChallRecoveryHandler
-	// PostLoginHandler sets the operation handler for the post login operation
-	PostLoginHandler PostLoginHandler
-	// PostRecoveryHandler sets the operation handler for the post recovery operation
-	PostRecoveryHandler PostRecoveryHandler
-	// PostRegisterHandler sets the operation handler for the post register operation
-	PostRegisterHandler PostRegisterHandler
-
-	// ServeError is called when an error is received, there is a default handler
-	// but you can set your own with this
-	ServeError func(http.ResponseWriter, *http.Request, error)
-
-	// PreServerShutdown is called before the HTTP(S) server is shutdown
-	// This allows for custom functions to get executed before the HTTP(S) server stops accepting traffic
-	PreServerShutdown func()
-
-	// ServerShutdown is called when the HTTP(S) server is shut down and done
-	// handling all active connections and does not accept connections any more
-	ServerShutdown func()
-
-	// Custom command line argument groups with their descriptions
-	CommandLineOptionsGroups []swag.CommandLineOptionsGroup
-
-	// User defined logger function.
-	Logger func(string, ...interface{})
-}
-
-// UseRedoc for documentation at /docs
-func (o *IdentitiesMicrosserviceAPI) UseRedoc() {
-	o.useSwaggerUI = false
-}
-
-// UseSwaggerUI for documentation at /docs
-func (o *IdentitiesMicrosserviceAPI) UseSwaggerUI() {
-	o.useSwaggerUI = true
-}
-
-// SetDefaultProduces sets the default produces media type
-func (o *IdentitiesMicrosserviceAPI) SetDefaultProduces(mediaType string) {
-	o.defaultProduces = mediaType
-}
-
-// SetDefaultConsumes returns the default consumes media type
-func (o *IdentitiesMicrosserviceAPI) SetDefaultConsumes(mediaType string) {
-	o.defaultConsumes = mediaType
-}
-
-// SetSpec sets a spec that will be served for the clients.
-func (o *IdentitiesMicrosserviceAPI) SetSpec(spec *loads.Document) {
-	o.spec = spec
-}
-
-// DefaultProduces returns the default produces media type
-func (o *IdentitiesMicrosserviceAPI) DefaultProduces() string {
-	return o.defaultProduces
-}
-
-// DefaultConsumes returns the default consumes media type
-func (o *IdentitiesMicrosserviceAPI) DefaultConsumes() string {
-	return o.defaultConsumes
-}
-
-// Formats returns the registered string formats
-func (o *IdentitiesMicrosserviceAPI) Formats() strfmt.Registry {
-	return o.formats
-}
-
-// RegisterFormat registers a custom format validator
-func (o *IdentitiesMicrosserviceAPI) RegisterFormat(name string, format strfmt.Format, validator strfmt.Validator) {
-	o.formats.Add(name, format, validator)
-}
-
-// Validate validates the registrations in the IdentitiesMicrosserviceAPI
-func (o *IdentitiesMicrosserviceAPI) Validate() error {
-	var unregistered []string
-
-	if o.JSONConsumer == nil {
-		unregistered = append(unregistered, "JSONConsumer")
-	}
-
-	if o.JSONProducer == nil {
-		unregistered = append(unregistered, "JSONProducer")
-	}
-
-	if o.APIKeyHeaderAuth == nil {
-		unregistered = append(unregistered, "XAPIKeyAuth")
-	}
-
-	if o.PostChallRecoveryHandler == nil {
-		unregistered = append(unregistered, "PostChallRecoveryHandler")
-	}
-	if o.PostLoginHandler == nil {
-		unregistered = append(unregistered, "PostLoginHandler")
-	}
-	if o.PostRecoveryHandler == nil {
-		unregistered = append(unregistered, "PostRecoveryHandler")
-	}
-	if o.PostRegisterHandler == nil {
-		unregistered = append(unregistered, "PostRegisterHandler")
-	}
-
-	if len(unregistered) > 0 {
-		return fmt.Errorf("missing registration: %s", strings.Join(unregistered, ", "))
-	}
-
-	return nil
-}
-
-// ServeErrorFor gets a error handler for a given operation id
-func (o *IdentitiesMicrosserviceAPI) ServeErrorFor(operationID string) func(http.ResponseWriter, *http.Request, error) {
-	return o.ServeError
-}
-
-// AuthenticatorsFor gets the authenticators for the specified security schemes
-func (o *IdentitiesMicrosserviceAPI) AuthenticatorsFor(schemes map[string]spec.SecurityScheme) map[string]runtime.Authenticator {
-	result := make(map[string]runtime.Authenticator)
-	for name := range schemes {
-		switch name {
-		case "APIKeyHeader":
-			scheme := schemes[name]
-			result[name] = o.APIKeyAuthenticator(scheme.Name, scheme.In, o.APIKeyHeaderAuth)
-
-		}
-	}
-	return result
-}
-
-// Authorizer returns the registered authorizer
-func (o *IdentitiesMicrosserviceAPI) Authorizer() runtime.Authorizer {
-	return o.APIAuthorizer
-}
-
-// ConsumersFor gets the consumers for the specified media types.
-// MIME type parameters are ignored here.
-func (o *IdentitiesMicrosserviceAPI) ConsumersFor(mediaTypes []string) map[string]runtime.Consumer {
-	result := make(map[string]runtime.Consumer, len(mediaTypes))
-	for _, mt := range mediaTypes {
-		switch mt {
-		case "application/json":
-			result["application/json"] = o.JSONConsumer
-		}
-
-		if c, ok := o.customConsumers[mt]; ok {
-			result[mt] = c
-		}
-	}
-	return result
-}
-
-// ProducersFor gets the producers for the specified media types.
-// MIME type parameters are ignored here.
-func (o *IdentitiesMicrosserviceAPI) ProducersFor(mediaTypes []string) map[string]runtime.Producer {
-	result := make(map[string]runtime.Producer, len(mediaTypes))
-	for _, mt := range mediaTypes {
-		switch mt {
-		case "application/json":
-			result["application/json"] = o.JSONProducer
-		}
-
-		if p, ok := o.customProducers[mt]; ok {
-			result[mt] = p
-		}
-	}
-	return result
-}
-
-// HandlerFor gets a http.Handler for the provided operation method and path
-func (o *IdentitiesMicrosserviceAPI) HandlerFor(method, path string) (http.Handler, bool) {
-	if o.handlers == nil {
-		return nil, false
-	}
-	um := strings.ToUpper(method)
-	if _, ok := o.handlers[um]; !ok {
-		return nil, false
-	}
-	if path == "/" {
-		path = ""
-	}
-	h, ok := o.handlers[um][path]
-	return h, ok
-}
-
-// Context returns the middleware context for the identities microsservice API
-func (o *IdentitiesMicrosserviceAPI) Context() *middleware.Context {
-	if o.context == nil {
-		o.context = middleware.NewRoutableContext(o.spec, o, nil)
-	}
-
-	return o.context
-}
-
-func (o *IdentitiesMicrosserviceAPI) initHandlerCache() {
-	o.Context() // don't care about the result, just that the initialization happened
-	if o.handlers == nil {
-		o.handlers = make(map[string]map[string]http.Handler)
-	}
-
-	if o.handlers["POST"] == nil {
-		o.handlers["POST"] = make(map[string]http.Handler)
-	}
-	o.handlers["POST"]["/chall-recovery"] = NewPostChallRecovery(o.context, o.PostChallRecoveryHandler)
-	if o.handlers["POST"] == nil {
-		o.handlers["POST"] = make(map[string]http.Handler)
-	}
-	o.handlers["POST"]["/login"] = NewPostLogin(o.context, o.PostLoginHandler)
-	if o.handlers["POST"] == nil {
-		o.handlers["POST"] = make(map[string]http.Handler)
-	}
-	o.handlers["POST"]["/recovery"] = NewPostRecovery(o.context, o.PostRecoveryHandler)
-	if o.handlers["POST"] == nil {
-		o.handlers["POST"] = make(map[string]http.Handler)
-	}
-	o.handlers["POST"]["/register"] = NewPostRegister(o.context, o.PostRegisterHandler)
-}
-
-// Serve creates a http handler to serve the API over HTTP
-// can be used directly in http.ListenAndServe(":8000", api.Serve(nil))
-func (o *IdentitiesMicrosserviceAPI) Serve(builder middleware.Builder) http.Handler {
-	o.Init()
-
-	if o.Middleware != nil {
-		return o.Middleware(builder)
-	}
-	if o.useSwaggerUI {
-		return o.context.APIHandlerSwaggerUI(builder)
-	}
-	return o.context.APIHandler(builder)
-}
-
-// Init allows you to just initialize the handler cache, you can then recompose the middleware as you see fit
-func (o *IdentitiesMicrosserviceAPI) Init() {
-	if len(o.handlers) == 0 {
-		o.initHandlerCache()
-	}
-}
-
-// RegisterConsumer allows you to add (or override) a consumer for a media type.
-func (o *IdentitiesMicrosserviceAPI) RegisterConsumer(mediaType string, consumer runtime.Consumer) {
-	o.customConsumers[mediaType] = consumer
-}
-
-// RegisterProducer allows you to add (or override) a producer for a media type.
-func (o *IdentitiesMicrosserviceAPI) RegisterProducer(mediaType string, producer runtime.Producer) {
-	o.customProducers[mediaType] = producer
-}
-
-// AddMiddlewareFor adds a http middleware to existing handler
-func (o *IdentitiesMicrosserviceAPI) AddMiddlewareFor(method, path string, builder middleware.Builder) {
-	um := strings.ToUpper(method)
-	if path == "/" {
-		path = ""
-	}
-	o.Init()
-	if h, ok := o.handlers[um][path]; ok {
-		o.handlers[um][path] = builder(h)
-	}
-}
